--- a/package.json
+++ b/package.json
@@ -9,7 +9,10 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@primeuix/themes": "^1.1.1",
     "@tailwindcss/vite": "^4.1.7",
+    "primeicons": "^7.0.0",
+    "primevue": "^4.3.4",
     "tailwindcss-primeui": "^0.6.1",
     "vue": "^3.5.13",
     "vue-router": "^4.5.1"
